--- a/default.cfg
+++ b/default.cfg
@@ -1,8 +1,13 @@
 [General]
 automatic_nested_transactions=1
 AutomaticTransactions=1
+AutomaticTransactionsPerFunc=0
+ContinueOnError=0
 DefaultRunLogic=default.usp
 Encoding=ANSI
+FailTransOnErrorMsg=0
+Replay64bit=0
+UseThreads=1
 XlBridgeTimeout=120
 [Iterations]
 IterationPace=IterationASAP
@@ -24,7 +29,9 @@ PrintTimeStamp=0
 Factor=1
 Limit=1
 LimitFlag=0
-Options=NOTHINK
+Options=RECORDED
+ThinkTimeRandomHigh=150
+ThinkTimeRandomLow=50
 [WEB]
 AnalogMode=0
 BrowserAcceptEncoding=gzip, deflate
@@ -62,6 +69,7 @@ ScreenAvailWidth=1920
 ScreenHeight=1080
 ScreenWidth=1920
 SearchForImages=1
+SnapshotOnErrorActive=0
 StartRecordingGMT=2021/04/01 21:56:42
 StartRecordingIsDst=0
 SupportCharset=None
